[gd_scene load_steps=14 format=3 uid="uid://mla6etoxl7dn"]

[ext_resource type="Texture2D" uid="uid://38dcw4vp2jpe" path="res://separator.png" id="1_8ohnf"]
[ext_resource type="Script" path="res://sc_pon.gd" id="1_x16uw"]
[ext_resource type="Script" path="res://sc_player_1.gd" id="2_jgho4"]
[ext_resource type="Texture2D" uid="uid://8aslq5ianii8" path="res://left_pallete.png" id="3_d1nbp"]
[ext_resource type="Script" path="res://sc_ball.gd" id="4_sf2mq"]
[ext_resource type="Script" path="res://sc_player_2.gd" id="4_v8q7w"]
[ext_resource type="Texture2D" uid="uid://d0kwqegsifd4f" path="res://ball.png" id="5_f423n"]
[ext_resource type="Texture2D" uid="uid://cq15s7431j75v" path="res://right_pallete.png" id="7_g7xy2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b2767"]
size = Vector2(662, 23)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c7w50"]
size = Vector2(16, 64)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_2fqx1"]
bounce = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_fdt17"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rg6sm"]
size = Vector2(34, 356.5)

[node name="Pon" type="Node2D"]
script = ExtResource("1_x16uw")

[node name="upper_wall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="upper_wall"]
position = Vector2(321, 1.5)
shape = SubResource("RectangleShape2D_b2767")

[node name="ColorRect" type="ColorRect" parent="upper_wall"]
offset_left = -10.0
offset_top = -16.0
offset_right = 652.0
offset_bottom = 13.0

[node name="lower_wall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D3" type="CollisionShape2D" parent="lower_wall"]
position = Vector2(323, 401)
shape = SubResource("RectangleShape2D_b2767")

[node name="ColorRect2" type="ColorRect" parent="lower_wall"]
offset_left = -7.0
offset_top = 389.0
offset_right = 655.0
offset_bottom = 418.0

[node name="net" type="Sprite2D" parent="."]
position = Vector2(320, 200)
texture = ExtResource("1_8ohnf")

[node name="Score_left" type="Label" parent="."]
offset_left = 166.0
offset_top = 28.0
offset_right = 206.0
offset_bottom = 68.0

[node name="Score_right" type="Label" parent="."]
offset_left = 475.0
offset_top = 31.0
offset_right = 515.0
offset_bottom = 71.0

[node name="player_1" type="CharacterBody2D" parent="." groups=["players"]]
disable_mode = 1
slide_on_ceiling = false
floor_stop_on_slope = false
floor_block_on_wall = false
script = ExtResource("2_jgho4")

[node name="Sprite2D" type="Sprite2D" parent="player_1"]
position = Vector2(40, 200)
scale = Vector2(2, 2)
texture = ExtResource("3_d1nbp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_1"]
position = Vector2(40, 200)
shape = SubResource("RectangleShape2D_c7w50")

[node name="player_2" type="CharacterBody2D" parent="." groups=["players"]]
floor_stop_on_slope = false
floor_block_on_wall = false
script = ExtResource("4_v8q7w")

[node name="Sprite2D" type="Sprite2D" parent="player_2"]
position = Vector2(600, 200)
scale = Vector2(2, 2)
texture = ExtResource("7_g7xy2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_2"]
position = Vector2(600, 200)
shape = SubResource("RectangleShape2D_c7w50")

[node name="ball" type="RigidBody2D" parent="."]
physics_material_override = SubResource("PhysicsMaterial_2fqx1")
gravity_scale = 0.0
max_contacts_reported = 2
contact_monitor = true
script = ExtResource("4_sf2mq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ball"]
position = Vector2(320, 200)
shape = SubResource("CircleShape2D_fdt17")

[node name="Sprite2D" type="Sprite2D" parent="ball"]
position = Vector2(320, 200)
scale = Vector2(2, 2)
texture = ExtResource("5_f423n")

[node name="area_right" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_right"]
position = Vector2(-7, 199.5)
shape = SubResource("RectangleShape2D_rg6sm")

[node name="area_left" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="area_left"]
position = Vector2(641, 202.75)
shape = SubResource("RectangleShape2D_rg6sm")

[connection signal="body_entered" from="ball" to="ball" method="_on_body_entered"]
[connection signal="body_entered" from="area_right" to="." method="_on_area_right_body_entered"]
[connection signal="body_entered" from="area_left" to="." method="_on_area_left_body_entered"]
